examples/standalone/envoy.yaml
static_resources:
  clusters:
    - name: web-bot-auth-key-resolver
      connect_timeout: 2s
      type: STATIC
      load_assignment:
        cluster_name: web-bot-auth-key-resolver
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8081
  listeners:
    - name: hello-world
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: hello_world
                codec_type: AUTO

                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /
                          direct_response:
                            status: 200
                            body:
                              inline_string: "Hello through Envoy\n"

                http_filters:
                  - name: envoy.extensions.filters.http.dynamic_modules
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter

                      dynamic_module_config:
                        module:
                          local:
                            filename: /etc/envoy/dynamic-modules/libenvoy_web_bot_auth.so
                        do_not_close: true

                      filter_name: web-bot-auth

                      filter_config:
                        "@type": type.googleapis.com/google.protobuf.Struct
                        value:
                          mode: observe
                          resolver:
                            cluster: web-bot-auth-key-resolver
                            timeout_ms: 2000
                          max_signature_lifetime_seconds: 86400
                          clock_skew_seconds: 5
                          required_components: []
                          accept_legacy_signature_agent: false
                          forward_identity_headers: true

                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
